# SPICaMusic_Android

./: .gitignore  LICENSE  QUICK_START_FILTER.md  README.md  SONG_FILTER_API.md  build.gradle  gradle.properties  settings.gradle
.github/: copilot-instructions.md
.github/workflows/: android.yml
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: privacy.html
app/src/main/cpp/: CMakeLists.txt  taglibWrapper.cpp  taglibWrapper.h
baselineprofile/: build.gradle
common/: build.gradle  consumer-rules.pro  proguard-rules.pro
core-preferences/: build.gradle
decoder_flac/: README.md  build.gradle  proguard-rules.txt
decoder_flac/src/androidTest/: AndroidManifest.xml
decoder_flac/src/main/: AndroidManifest.xml
decoder_flac/src/test/: AndroidManifest.xml
extension-flac2120/: build.gradle
feature-library-data/: build.gradle  consumer-rules.pro  proguard-rules.pro
feature-library-domain/: build.gradle
feature-lyrics-data/: build.gradle  consumer-rules.pro
feature-lyrics-domain/: build.gradle
feature-player-data/: build.gradle  consumer-rules.pro
feature-player-domain/: build.gradle
feature-settings-domain/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lyric-core/: build.gradle  consumer-rules.pro
media/: build.gradle
media/libs/: media3-decode-ffmpeg-1.8.0.aar
media/src/main/: AndroidManifest.xml
navkit/: build.gradle
player-core/: build.gradle  proguard-rules.pro
storage-core/: build.gradle  proguard-rules.pro
(+545 files in other folders)
